# pacman-token-manager

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/claude_monitor/cli/: main.py
src/claude_monitor/core/: settings.py
src/claude_monitor/monitoring/: orchestrator.py  threshold_alert.py
src/claude_monitor/ui/: display_controller.py  session_display.py  simple_display.py
src/pacman/: __init__.py  __main__.py
src/pacman/cli/: bootstrap.py  main.py
src/pacman/core/: calculations.py  data_processors.py  models.py  p90_calculator.py  plans.py  pricing.py  settings.py
src/pacman/data/: aggregator.py  analysis.py  analyzer.py  reader.py
src/pacman/mcp/: __init__.py  server.py
src/pacman/monitoring/: data_manager.py  orchestrator.py
src/pacman/terminal/: input_handler.py  manager.py
src/pacman/ui/: components.py  display_controller.py  guidance.py  progress_bars.py  session_display.py  simple_display.py  table_views.py
src/pacman/utils/: formatting.py  model_utils.py  timezone.py
src/tests/: conftest.py  run_tests.py  test_aggregator.py  test_analysis.py  test_calculations.py  test_cli_main.py  test_data_reader.py  test_display_controller.py  test_error_handling.py  test_formatting.py  test_monitoring_orchestrator.py  test_pricing.py  test_session_analyzer.py  test_settings.py  test_table_views.py  test_time_utils.py  test_timezone.py  test_version.py
src/tests/examples/: api_examples.py
